# ayahs-audio-downloader

./: .gitignore  README.md  app.py  pyproject.toml
.specstory/history/: 2025-05-05_16-16-i-want-api-suggestions-for-the-following.md
docs/: project_setup.md  prompt_TODOs.md
src/: __init__.py  audio_downloader.py  audio_processor.py
