[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ayahs_audio_downloader"
version = "0.1.0"
description = "Download and concatenate Quran audio files based on ayah ranges"
readme = "README.md"
requires-python = ">=3.8,<3.12"

authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.20.0",
    "requests>=2.28.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "app.py",
    "README.md",
]